--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 </head>
 <body>
   <div class="info">
-    <img src="./eisenhower-matrix.jpg">
-    <a class="more_info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img class="info-img" src="./eisenhower-matrix.jpg">
+    <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
     <p id="add-element-section">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task"class="task" type="text">
-        <button>Add</button>
+        <button class="button">Add</button>
       </div>
     </p><h3>Todo</h3>
     <ul id="incomplete-tasks">
@@ -23,8 +23,8 @@
         <input type="checkbox">
         <label class="task">Pay Bills</label>
         <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
           <img src="./remove.svg">
         </button>
       </li>
@@ -32,8 +32,8 @@
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
+        <button class="button edit">Save</button>
+        <button class="button delete">
           <img src="./remove.svg">
         </button>
       </li>
@@ -44,8 +44,8 @@
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
         <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
           <img src="./remove.svg">
         </button>
       </li>
