--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button class="button">Add</button>
       </div>
     </p><h3>Todo</h3>
-    <ul id="incomplete-tasks">
+    <ul id="incompleted-tasks">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
@@ -28,7 +28,7 @@
           <img src="./remove.svg">
         </button>
       </li>
-      <li class="edit-ode">
+      <li class="edit-mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
