--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" href="style.css"  media="screen" charset="utf-8">
 </head>
 <body>
-  <div class="info">
+  <section class="info">
     <img class="info-img" src="./eisenhower-matrix.jpg">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="centered-main-page-element">
+  </section>
+  <section class="centered-main-page-element">
     <p id="add-element-section">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
@@ -50,7 +50,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </section>
   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
