refactor: added alt attributes for images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <section class="info">
-    <img class="info-img" src="./eisenhower-matrix.jpg">
+    <img class="info-img" src="./eisenhower-matrix.jpg" alt="info-img">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </section>
   <section class="centered-main-page-element">
@@ -25,7 +25,7 @@
         <input type="text" class="task">
         <button class="button edit">Edit</button>
         <button class="button delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove-image">
         </button>
       </li>
       <li class="edit-mode">
@@ -34,7 +34,7 @@
         <input type="text" value="Go Shopping" class="task">
         <button class="button edit">Save</button>
         <button class="button delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove-image">
         </button>
       </li>
     </ul>
@@ -46,7 +46,7 @@
         <input type="text" class="task">
         <button class="button edit">Edit</button>
         <button class="button delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="remove-image">
         </button>
       </li>
     </ul>
